# BaitapC

./: CMakeLists.txt  bt1.c  contrto.c  css.css  main.c  sinh vien.c  sinhvien.txt  sinhvien_out.txt  ss14.c  student.txt  test.txt  user.txt
PTIT_ KS2023C_HuynhBaoDuy_de 5/: de 5.c
Project/: Sinh vien chinh thuc.c  demo.c  sinh vien 3.c  sinh vien.c
baitap/: 1.c  1.cu  2.c  3.cu
de so 4/: PTIT_KS2023C_HuynhBaoDuy.c
front-end/: 2.html  bthtml.html  gird.html  stylea.css
front-end/PTIT_KS_HUYNHBAODUY/: PTIT_KS_Huynh Bao Duy.html
front-end/PTIT_KS_HUYNHBAODUY/PTIT_KS_HUYNHBAODUY/: PTIT_KS_Huynh Bao Duy.css  PTIT_KS_Huynh Bao Duy.html
front-end/css/: 1.html  2.html  style1.css  styles.css
front-end/front-end/ss2/: 2.html
front-end/ss2/: 1.html  3.html
front-end/ss2/front-end/: style.css
front-end/ss2/front-end/ss1/: 1.html  3.html
front-end/ss2/front-end/ss2/: 1.html  3.html
front-end/ss3/: 1.html  bt.css  bt.html  grid.css  layout.css  layout.html
learnC/: CMakeLists.txt  ex1  library.c  library.h
learnC/Lession1/: ex1.c
learnC/Lession2/: ex1.c
ss1/: 1.html
ss13/: 1.c  2.c  3.c  4.c
ss14/: 1.c  2.c  3.c  4.c  5.c
ss15/: 1.c  2.c  3.c
ss3/: ex1.c  ex2.c  ex2.h  ex3.c  ex4.c  ex4.h  ex6.c  ex6.h
ss4/: ex1.c  ex1.cpp  ex2.c  ex6.c
ss5/: dd.cu  dd.h  ex1.c  ex2.c  ex3.c  ex4.c  inclass.c  tinh tong.c
ss6/: d.c  ex1.c  ex2.c
ss7/: ex1.c  ex2.c  ex3.c  ex4.c  mang 2 chieu.c
ss8/: 1.c  2.c  3.c
ss9/: 2.c
tren lop/: 2.c  ctm2c.c  doc file.c  doc ghi file bt2.c  ham de quy.c  mang.c  struct.c
