cmake_minimum_required(VERSION 3.26)
project(untitled1 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled1 main.c
        ss3/ex1.c
        ss5/1.c
        ss3/while.c
        ss3/ex2.c
        ss3/ex3.c
        ss3/ex4.c
        ss3/ex6.c
        ss4/ex1.c
        ss4/ex2.c
        ss4/ex3.c
        ss4/ex4.c
        ss4/ex6.c
        ss5/inclass.c
        "ss5/tinh tong.c"
        ss5/dd.cu
        ss5/dd.h
        ss5/ex1.c
        ss5/ex2.c
        ss5/ex3.c
        ss5/ex4.c
        ss6/ex1.c
        ss6/ex2.c
        ss6/d.c
)
